Moving java options into thinklab.sh for flexibility.